deploy-convert.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-convert
spec:
  selector:
    matchLabels:
      role: batch-convert
  template:
    metadata:
      labels:
        role: batch-convert
    spec:
      serviceAccountName: ksa-convert-api
      containers:
      - name: batch-convert
        image: gcr.io/conversiontoolg34/batch-convert:v1.7
        resources:
          requests:
            memory: "1024Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
