ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convert-app
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api-test
        backend:
          service:
            name: api
            port: 
              number: 5001
